<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Models.DescriptionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tikal_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0sp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/description_button"
                android:src="@drawable/tikal" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/star_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="325sp"
                android:layout_marginTop="-30sp"
                android:layout_marginBottom="10sp"
                android:clickable="true"
                android:focusable="true"
                android:src="@android:drawable/star_big_off"
                android:tint="@color/colorPrimaryDark"
                app:backgroundTint="@color/colorAccent"
                app:elevation="6dp" />

            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25sp"
                android:layout_marginTop="-15sp"
                android:layout_marginEnd="25sp"
                android:layout_marginBottom="15sp"
                android:fontFamily="@font/roboto"
                android:text="@string/place_text"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="50sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:inputType="textPersonName"
                android:text="@string/name_text"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/info_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10sp"
                android:fontFamily="@font/roboto"
                android:text="@string/info_text"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/comment_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="20sp"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:inputType="textPersonName"
                android:text="@string/comment_text"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/comment_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="200sp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="50sp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/roboto"
                android:text="@string/comment_text2"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>