<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Models.MainFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100sp"
                android:layout_marginBottom="100sp"
                android:fontFamily="@font/roboto"
                android:text="@string/app_Title"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="50sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/description_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10sp"
                android:background="@color/colorAccent"
                android:drawingCacheQuality="auto"
                android:ellipsize="none"
                android:fontFamily="@font/roboto"
                android:text="@string/description_button"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="25sp" />

            <Button
                android:id="@+id/about_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10sp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/roboto"
                android:text="@string/about_button"
                android:textSize="25sp" />

            <Button
                android:id="@+id/comment_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10sp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/roboto"
                android:text="@string/comment_button"
                android:textSize="25sp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>